--- a/code/client/stylesheets/module/_Signup.scss
+++ b/code/client/stylesheets/module/_Signup.scss
@@ -1,3 +1,28 @@
+.Signup {
+  margin-bottom: 40px;
+}
+
 .Signup form + p {
   margin-top: 20px;
+}
+
+.Signup .Plans {
+  margin-bottom: 20px;
+  background: #fafafa;
+  border: 1px solid #eee;
+  border-radius: 3px;
+}
+
+.Signup .Plans .Plan {
+  display: block;
+  padding: 15px;
+  margin: 0;
+
+  input {
+    margin-right: 10px;
+  }
+
+  &:not(:last-child) {
+    border-bottom: 1px solid #eee;
+  }
 }
