--- a/code/client/stylesheets/module/_Plans.scss
+++ b/code/client/stylesheets/module/_Plans.scss
@@ -1,4 +1,22 @@
 .Plans {
+  background: #fafafa;
+  border: 1px solid #eee;
+  border-radius: 3px;
+
+  .Plan {
+    display: block;
+    padding: 15px;
+    margin: 0;
+
+    input {
+      margin-right: 10px;
+    }
+
+    &:not(:last-child) {
+      border-bottom: 1px solid #eee;
+    }
+  }
+
   .Plan.current {
     pointer-events: none;
 
