add additional code for managing subscriptions

--- a/code/client/stylesheets/application.scss
+++ b/code/client/stylesheets/application.scss
@@ -8,5 +8,6 @@
 @import "module/Signup";
 @import "module/Plans";
 @import "module/Card";
+@import "module/Subscription";
 
 @import "state/Navbar";
